; ModuleID = '/home/carl/AnghaBench/linux/drivers/bus/extr_omap_l3_smx.c_omap3_l3_initiator_string.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bus/extr_omap_l3_smx.c_omap3_l3_initiator_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"LCD\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"SAD2D\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"MPU\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"IVA_SS\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"IVA_SS_DMA\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"SGX\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"CAM\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"DAP\00", align 1
@.str.8 = private unnamed_addr constant [8 x i8] c"SDMA_WR\00", align 1
@.str.9 = private unnamed_addr constant [8 x i8] c"SDMA_RD\00", align 1
@.str.10 = private unnamed_addr constant [8 x i8] c"USB_OTG\00", align 1
@.str.11 = private unnamed_addr constant [9 x i8] c"USB_HOST\00", align 1
@.str.12 = private unnamed_addr constant [18 x i8] c"UNKNOWN Initiator\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @omap3_l3_initiator_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @omap3_l3_initiator_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %17 [
    i32 137, label %5
    i32 136, label %6
    i32 143, label %7
    i32 142, label %7
    i32 141, label %7
    i32 140, label %7
    i32 139, label %7
    i32 152, label %8
    i32 151, label %8
    i32 150, label %8
    i32 149, label %9
    i32 148, label %9
    i32 147, label %9
    i32 146, label %9
    i32 145, label %9
    i32 144, label %9
    i32 138, label %10
    i32 156, label %11
    i32 155, label %11
    i32 154, label %11
    i32 153, label %12
    i32 131, label %13
    i32 130, label %13
    i32 135, label %14
    i32 134, label %14
    i32 133, label %14
    i32 132, label %14
    i32 128, label %15
    i32 129, label %16
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %18

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %18

7:                                                ; preds = %1, %1, %1, %1, %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %18

8:                                                ; preds = %1, %1, %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %18

9:                                                ; preds = %1, %1, %1, %1, %1, %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %18

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %18

11:                                               ; preds = %1, %1, %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %18

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %18

13:                                               ; preds = %1, %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %18

14:                                               ; preds = %1, %1, %1, %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %18

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %18

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %18

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %18

18:                                               ; preds = %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %19 = load i8*, i8** %2, align 8
  ret i8* %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
